--- a/config.yaml
+++ b/config.yaml
@@ -3,10 +3,10 @@ EventHubConfig:
   EventHubName: honeywell-uas-oem-alarms
 
 RabbitConfig:
-  ConnectionString:
+  ConnectionString: "amqps://mxgzljbw:OHbNiq1eBbjKWbEp5s4zxPBV76R_FJmM@chimpanzee.rmq.cloudamqp.com/mxgzljbw"
   QueueName: "oem"
 
 ControllerConfig:
   Frequency: 1000
   MaxDataPoint: 20
-  DataDefinition: /Users/christophebuffard/Documents/Dev/github.com/oem-sim-g/assets.jsonl
+  DataDefinition: assets.jsonl
